<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="?myBackgroundGradient">

    <LinearLayout
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="625dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewHeader"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Authentication Page" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/inputUsername"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:hint="Username *"
                android:inputType="text" />

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"

                android:hint="Password *"
                android:inputType="text" />

            <Button
                android:id="@+id/themeButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="LAYOUT SELECTION" />

            <Button
                android:id="@+id/buttonSignUp"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="sign up" />

            <Button
                android:id="@+id/buttonSignIn"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="sign in" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>