...
        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/cityListLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="89dp"
             />

        <Button
            android:id="@+id/buttonAddCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Edit Locations" />

        <Button
            android:id="@+id/settingsPage"
...
